Refactoring. Embed discord messages moved to properties.